Begins adding a test which calls the api fetch

--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "style-loader": "^0.18.2",
     "webpack": "^3.5.4",
     "webpack-dev-server": "^2.7.1",
-    "webpack-node-externals": "^1.6.0"
+    "webpack-node-externals": "^1.6.0",
+    "zombie": "^6.1.4"
   },
   "dependencies": {
-    "axios": "^0.16.2"
+    "axios": "^0.16.2",
+    "chai-http": "^4.3.0"
   },
   "author": "",
   "license": "ISC"
